manifest/objects/HealthPlan_Price__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HealthPlan Prices</relationshipLabel>
        <relationshipName>HealthPlan_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copado_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Copado External Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Type_Formula__c</fullName>
        <description>Used in the Pricing for Livongo Price Rule</description>
        <formula>IF(ISPICKVAL(Fee_Type__c,&quot;&quot;), &apos;NULL&apos;,TEXT(Fee_Type__c))</formula>
        <label>Fee Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fee_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrandParent_Product_Code__c</fullName>
        <formula>IF(ISBLANK(GrandParent_Product__c), &apos;NULL&apos;,GrandParent_Product__r.ProductCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrandParent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrandParent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrandParent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>HealthPlan Prices (GrandParent Product)</relationshipLabel>
        <relationshipName>HealthPlan_Child_Child_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Custom__c</fullName>
        <formula>Account__c != NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <label>Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Product_Code__c</fullName>
        <description>Parent Product Code Formula</description>
        <formula>IF(ISBLANK(Parent_Product__c), &apos;NULL&apos;,Parent_Product__r.ProductCode)</formula>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User this price if the product entry has a parent</description>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>HealthPlan Prices (Parent Product)</relationshipLabel>
        <relationshipName>HealthPlan_Child_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>HealthPlan Prices</relationshipLabel>
        <relationshipName>HealthPlan_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Book_of_Business_End__c</fullName>
        <label>Total Book of Business End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Book_of_Business_Start__c</fullName>
        <label>Total Book of Business Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HealthPlan Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Parent_Product_Code__c</columns>
        <columns>Opt_In__c</columns>
        <columns>Total_Book_of_Business_Start__c</columns>
        <columns>Total_Book_of_Business_End__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HealthPlan Price</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HealthPlan Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>